src/objects/UST_Event_Registration__c.object
<CustomObject>
    <description>Object to contain the parent Visit/Event registration infromation and become a parent to the related Appointments</description>
    <fields>
        <fullName>Actual_Number_of_Guests__c</fullName>
        <label>Actual Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_Info_Answer_1__c</fullName>
        <description>The answer to the additional question as defined in the event definition.</description>
        <inlineHelpText>The answer to the additional question as defined in the event definition.</inlineHelpText>
        <label>Add Info Answer 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Answer_2__c</fullName>
        <description>The answer to the additional question as defined in the event definition.</description>
        <inlineHelpText>The answer to the additional question as defined in the event definition.</inlineHelpText>
        <label>Add Info Answer 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Answer_3__c</fullName>
        <description>The answer to the additional question as defined in the event definition.</description>
        <inlineHelpText>The answer to the additional question as defined in the event definition.</inlineHelpText>
        <label>Add Info Answer 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_1__c</fullName>
        <description>Question as defined for additional questions in event definition.</description>
        <formula>Event__r.Add_Info_Question_Text_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Question as defined for additional questions in event definition.</inlineHelpText>
        <label>Add Info Question 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_2__c</fullName>
        <description>Question as defined for additional questions in event definition.</description>
        <formula>Event__r.Add_Info_Question_Text_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Question as defined for additional questions in event definition.</inlineHelpText>
        <label>Add Info Question 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Info_Question_3__c</fullName>
        <description>Question as defined for additional questions in event definition.</description>
        <formula>Event__r.Add_Info_Question_Text_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Question as defined for additional questions in event definition.</inlineHelpText>
        <label>Add Info Question 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_To_Calendar_Link__c</fullName>
        <description>Link to add to your calendar event feature.</description>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;usteventaddtocalendar?instanceID=&quot;
&amp; Id
,&quot;Add to Calendar&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to add to your calendar event feature.</inlineHelpText>
        <label>Add To Calendar Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admissions_Counselor__c</fullName>
        <formula>Contact__r.Suggested_UG_Adm4Y_Counselor_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admissions Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Table__c</fullName>
        <label>Appointment Table</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCC_Transactional_Email_Statuses__c</fullName>
        <defaultValue>&quot;Confirmed&quot;</defaultValue>
        <description>Selected status will send transactional emails to the BCC Transactional Emails list if those status emails have been defined for the event.</description>
        <inlineHelpText>Selected status will send transactional emails to the BCC Transactional Emails list if those status emails have been defined for the event.</inlineHelpText>
        <label>BCC Transactional Email Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCC_Transactional_Emails__c</fullName>
        <description>Comma separated email list to send transactional emails for this registration.</description>
        <inlineHelpText>Comma separated email list to send transactional emails for this registration.</inlineHelpText>
        <label>BCC Transactional Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campus_Tour_Location__c</fullName>
        <label>Campus Tour Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campus_Tour_Time__c</fullName>
        <label>Campus Tour Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Call_Result__c</fullName>
        <label>Confirmation Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Talked to Prospect</fullName>
                </value>
                <value>
                    <fullName>Talked to Parent</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Change needed-Call Logged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Banner_ID__c</fullName>
        <formula>Contact__r.Banner_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Banner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Soft_Match_Email__c</fullName>
        <description>When a new contact is created by the event app this field displays possible matches to other contact records that have the same email address.</description>
        <inlineHelpText>When a new contact is created by the event app this field displays possible matches to other contact records that have the same email address.</inlineHelpText>
        <label>Contact Soft Match Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Soft_Match_First_Last_Zip__c</fullName>
        <description>When a new contact is created by the event app this field displays possible matches to other contact records that have the same first name, last name and zip</description>
        <inlineHelpText>When a new contact is created by the event app this field displays possible matches to other contact records that have the same first name, last name and zip</inlineHelpText>
        <label>Contact Soft Match First Last Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UST Event Registrations</relationshipLabel>
        <relationshipName>UST_Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_All_Appointments_Confirmed_del__c</fullName>
        <label>Date All Appointments Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Text__c</fullName>
        <formula>(CASE(
MOD( Event_Instance_Date__c - DATE( 1900, 1, 7 ), 7 ),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;, 
&quot;Saturday&quot;
))

&amp;&quot;, &quot;&amp;

(CASE(
MONTH(Event_Instance_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;))

&amp;&quot; &quot;&amp;

CASE(RIGHT(TEXT(Event_Instance_Date__c),2),
&quot;01&quot;, &quot;1st&quot;,
&quot;21&quot;, &quot;21st&quot;,
&quot;31&quot;, &quot;31st&quot;,
&quot;02&quot;, &quot;2nd&quot;,
&quot;22&quot;, &quot;22nd&quot;,
&quot;03&quot;, &quot;3rd&quot;,
&quot;23&quot;, &quot;23rd&quot;,
&quot;04&quot;, &quot;4th&quot;,
&quot;05&quot;, &quot;5th&quot;,
&quot;06&quot;, &quot;6th&quot;,
&quot;07&quot;, &quot;7th&quot;,
&quot;08&quot;, &quot;8th&quot;,
&quot;09&quot;, &quot;9th&quot;,
(RIGHT(TEXT(Event_Instance_Date__c),2)&amp;&quot;th&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <formula>IF(DATEVALUE(Event_Instance__r.End_Date_Time__c) &gt;= DATE(YEAR(DATEVALUE(Event_Instance__r.End_Date_Time__c)), 3, 1) + (14 - CASE(MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.End_Date_Time__c)), 3, 1) - DATE(1900, 1, 7), 7), 0, 7, MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.End_Date_Time__c)), 3, 1) - DATE(1900, 1, 7), 7))) &amp;&amp;
    DATEVALUE(Event_Instance__r.End_Date_Time__c) &lt;
    DATE(YEAR(DATEVALUE(Event_Instance__r.End_Date_Time__c)), 11, 1) +
    (
        7 -
        CASE(MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.End_Date_Time__c)), 11, 1) - DATE(1900, 1, 7), 7),
            0, 7, MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.End_Date_Time__c)), 11, 1) - DATE(1900, 1, 7), 7))
    ),
    /*Daylight saving ENDS*/
    IF(
        VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 5), 2)) = 12,
        MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 5) + &apos; PM&apos;,

        IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 5), 2)) &lt; 12,
            IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 5), 2)) = 00, TEXT(12) +
                MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 14, 3),
                IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 5), 2)) &lt; 10,
                    MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 13, 4), MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 5))) + &apos; AM&apos;,
            TEXT(VALUE(MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 12, 2)) - 12) + MID(TEXT(Event_Instance__r.End_Date_Time__c - 5 / 24), 14, 3) + &apos; PM&apos;)),

    /*Daylight saving STARTS*/
    IF(
        VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 5), 2)) = 12,
        MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 5) + &apos; PM&apos;,

        IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 5), 2)) &lt; 12,
            IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 5), 2)) = 00, TEXT(12) +
                MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 14, 3),
                IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 5), 2)) &lt; 10,
                    MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 13, 4), MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 5))) + &apos; AM&apos;,
            TEXT(VALUE(MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 12, 2)) - 12) + MID(TEXT(Event_Instance__r.End_Date_Time__c - 6 / 24), 14, 3) + &apos; PM&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Instance_Date__c</fullName>
        <formula>DATEVALUE(Event_Instance__r.Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Instance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Instance_Name__c</fullName>
        <formula>Event_Instance__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Instance Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Instance_Title__c</fullName>
        <formula>Event_Instance__r.Instance_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Instance Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Instance__c</fullName>
        <label>Event Instance</label>
        <referenceTo>UST_Event_Instance__c</referenceTo>
        <relationshipLabel>UST Event Registrations</relationshipLabel>
        <relationshipName>Event_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event_Instance__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration_Cancel_Link__c</fullName>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;usteventcancelreview?regId=&quot;
&amp; Id
,&quot;Cancel Registration&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Registration Cancel Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_School_Name__c</fullName>
        <description>School hosting the event for which this registrant registered</description>
        <formula>Event_Instance__r.Event__r.School__r.Name</formula>
        <inlineHelpText>School hosting the event for which this registrant registered</inlineHelpText>
        <label>Event School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>UST_Event__c</referenceTo>
        <relationshipLabel>UST Event Registrations</relationshipLabel>
        <relationshipName>UG_Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Counselor__c</fullName>
        <formula>Contact__r.Suggested_UG_FinAid_Counselor_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Aid Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generated_Itinerary__c</fullName>
        <description>Auto generated itinerary based on confirmed appointments.</description>
        <inlineHelpText>Auto generated itinerary based on confirmed appointments.</inlineHelpText>
        <label>Generated Itinerary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generated_Requested_Appointments__c</fullName>
        <description>A list of all requested appointments regardless of status.</description>
        <inlineHelpText>A list of all requested appointments regardless of status.</inlineHelpText>
        <label>Generated Requested Appointments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Assignment__c</fullName>
        <description>Utilized to capture Groups within an instance. Primarily utilized for Orientation when all the registrants are broken into individual group assignments.</description>
        <inlineHelpText>Group Assignment has a max of 2 characters and can be letters or numbers.</inlineHelpText>
        <label>Group Assignment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Title__c</fullName>
        <formula>Event_Instance__r.Instance_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name_as_Student__c</fullName>
        <description>Field used by UDAR to identify/match students</description>
        <label>Last Name as Student</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>IF( !ISBLANK(Event_Instance__r.Location_Address_Override__c), 
     Event_Instance__r.Location_Address_Override__c, 
     Event__r.Location_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Map_Link__c</fullName>
        <formula>IF( !ISBLANK(Event_Instance__r.Location_Map_Link_Override__c), 
     Event_Instance__r.Location_Map_Link_Override__c, 
     Event__r.Location_Map_Link__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Title__c</fullName>
        <formula>IF( !ISBLANK(Event_Instance__r.Location_Title_Override__c), 
     Event_Instance__r.Location_Title_Override__c, 
     Event__r.Location_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPCW_Visit_ID__c</fullName>
        <description>Minnesota Private College Week Visit ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Minnesota Private College Week Visit ID</inlineHelpText>
        <label>MPCW Visit ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Matching_Log__c</fullName>
        <description>Log of matches and soft matches.</description>
        <inlineHelpText>Log of matches and soft matches.</inlineHelpText>
        <label>Matching Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Contact_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when while registering for an event on the Web a client&apos;s contact was not found and the event app created one for them.</description>
        <inlineHelpText>This is checked when while registering for an event on the Web a client&apos;s contact was not found and the event app created one for them.</inlineHelpText>
        <label>New Contact Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <description>Total Number of Guests not including the student</description>
        <inlineHelpText>Total Number of Guests not including the student</inlineHelpText>
        <label>Number of Guests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name_Formatted__c</fullName>
        <formula>IF(!ISBLANK(Registrant_Preferred_First_Name__c), Registrant_Preferred_First_Name__c, Registrant_First_Name__c) + &apos; &apos; +
Registrant_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred First Name Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_St_Thomas_Class_Year__c</fullName>
        <description>Created for UDAR Events to match on Preferred St. Thomas Class Year.</description>
        <label>Preferred St. Thomas Class Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Visit_Time__c</fullName>
        <label>Preferred Visit Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>All Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_Location__c</fullName>
        <label>Presentation Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_Time__c</fullName>
        <label>Presentation Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Applicant_Type__c</fullName>
        <label>Registrant Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First-Year</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_City__c</fullName>
        <description>The city that event registrant reported at time of registering for the event.</description>
        <inlineHelpText>The city that event registrant reported at time of registering for the event.</inlineHelpText>
        <label>Registrant City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_College_Code__c</fullName>
        <description>The college code reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The college code reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant College Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_College_Not_Found__c</fullName>
        <description>College name filled in if our search did not find the registrants college.</description>
        <inlineHelpText>College name filled in if our search did not find the registrants college.</inlineHelpText>
        <label>Registrant College Not Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_College_Year__c</fullName>
        <description>The last year attended the indicated college</description>
        <inlineHelpText>The last year attended the indicated college</inlineHelpText>
        <label>Registrant College Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_College__c</fullName>
        <description>The most recent college attended name reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The most recent college attended name reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant College</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Country__c</fullName>
        <label>Registrant Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_Date_of_Birth__c</fullName>
        <description>The date of birth of the registrant used mostly for contact matching.</description>
        <inlineHelpText>The date of birth of the registrant used mostly for contact matching.</inlineHelpText>
        <label>Registrant Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registrant_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preference to not call reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>Preference to not call reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registrant_Email__c</fullName>
        <description>The email reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The email reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Registrant_First_Name__c</fullName>
        <description>The first name reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The first name reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Gender__c</fullName>
        <description>The gender reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The gender reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_High_School_Code__c</fullName>
        <description>The code of the high school reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The code of the high school reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant High School Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_High_School_Grad_Year__c</fullName>
        <description>The high school graduation year the the event registrant recorded at the time of registering for an event.</description>
        <inlineHelpText>The high school graduation year the the event registrant recorded at the time of registering for an event.</inlineHelpText>
        <label>Registrant High School Grad Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_High_School_Not_Found__c</fullName>
        <description>Field to record the name entered by registrant for a High School when they couldn&apos;t find it in our search.</description>
        <inlineHelpText>Field to record the name entered by registrant for a High School when they couldn&apos;t find it in our search.</inlineHelpText>
        <label>Registrant High School Not Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_High_School__c</fullName>
        <description>The first name reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The first name reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant High School</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Last_Name__c</fullName>
        <description>The last name reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The last name reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Major_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program of interest 2</description>
        <inlineHelpText>Program of interest 2</inlineHelpText>
        <label>Registrant Major 2</label>
        <referenceTo>Major__c</referenceTo>
        <relationshipLabel>UST Event Registrations (Registrant Major 2)</relationshipLabel>
        <relationshipName>UST_Event_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrant_Major_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program of interest 3</description>
        <inlineHelpText>Program of interest 3</inlineHelpText>
        <label>Registrant Major 3</label>
        <referenceTo>Major__c</referenceTo>
        <relationshipLabel>UST Event Registrations (Registrant Major 3)</relationshipLabel>
        <relationshipName>UST_Event_Registrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrant_Major_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program of interest 4</description>
        <inlineHelpText>Program of interest 4</inlineHelpText>
        <label>Registrant Major 4</label>
        <referenceTo>Major__c</referenceTo>
        <relationshipLabel>UST Event Registrations (Registrant Major 4)</relationshipLabel>
        <relationshipName>UST_Event_Registrations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrant_Major_Prog_Major_Conc_Code__c</fullName>
        <formula>Registrant_Major__r.Prog_Major_Conc_Code__c</formula>
        <label>Registrant Major Prog|Major|Conc Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Major__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program of interest 1</description>
        <inlineHelpText>Program of interest 1</inlineHelpText>
        <label>Registrant Major</label>
        <referenceTo>Major__c</referenceTo>
        <relationshipLabel>UST Event Registrations</relationshipLabel>
        <relationshipName>UST_Event_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registrant_Mobile_Phone__c</fullName>
        <description>The mobile phone reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The mobile phone reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registrant_Other_Email__c</fullName>
        <description>If registrant type is other for student registration this is their email.</description>
        <inlineHelpText>If registrant type is other for student registration this is their email.</inlineHelpText>
        <label>Registrant Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Registrant_Other_First_Name__c</fullName>
        <description>If a registration type is other this records their first name.</description>
        <inlineHelpText>If a registration type is other this records their first name.</inlineHelpText>
        <label>Registrant Other First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Other_Last_Name__c</fullName>
        <description>If a registrant type of other is singing up a student this is their last name.</description>
        <label>Registrant Other Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>